[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/SchoonSquare/SchoonSquareDialogue.tres" type="DynamicFont" id=1]
[ext_resource path="res://Sound/VoiceSynth/VoiceSynth.wav" type="AudioStream" id=2]
[ext_resource path="res://AutoLoad/DialogueManager/DialogueManager.gd" type="Script" id=5]
[ext_resource path="res://AutoLoad/DialogueManager/DialogueLabel.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/HBoxContainer/DialogueLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer/HBoxContainer/NameLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/VBoxContainer/HBoxContainer/NameLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/VBoxContainer/HBoxContainer/DialogueLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Polygon2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:gradient_visibility")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/HBoxContainer/DialogueLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer/HBoxContainer/NameLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/VBoxContainer/HBoxContainer/NameLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/VBoxContainer/HBoxContainer/DialogueLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Polygon2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:gradient_visibility")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="DialogueManager" type="CanvasLayer"]
layer = 120
script = ExtResource( 5 )
gradient_visibility = 1.0

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 256, 1024, 256, 1024, 600, 0, 600 )
vertex_colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Control/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 616.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
grow_vertical = 0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 123.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Cyan:"
align = 2
clip_text = true

[node name="ReferenceRect2" type="ReferenceRect" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 143.0
margin_bottom = 100.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="DialogueLabel" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 147.0
margin_right = 1132.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
custom_fonts/bold_italics_font = ExtResource( 1 )
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]This looks promising. [i]Follow me![/i][/center]"
text = "This looks promising. Follow me!"
fit_content_height = true
script = ExtResource( 6 )

[node name="ReferenceRect3" type="ReferenceRect" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 1136.0
margin_right = 1152.0
margin_bottom = 100.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2

[node name="ReferenceRect" type="ReferenceRect" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 1156.0
margin_right = 1280.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="VoiceAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.127
bus = "Effects"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
